--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.1",
         "laravel/tinker": "^2.10.1",
-        "razorpay/razorpay": "^2.9"
+        "razorpay/razorpay": "^2.9",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
